[gd_scene load_steps=10 format=2]

[ext_resource path="res://graphics/popup/terminal/screens/TerminalMenu.gd" type="Script" id=1]
[ext_resource path="res://graphics/popup/terminal/buttons/down_button.png" type="Texture" id=2]
[ext_resource path="res://graphics/popup/terminal/buttons/down_button_hover.png" type="Texture" id=3]
[ext_resource path="res://graphics/popup/terminal/buttons/up_button.png" type="Texture" id=4]
[ext_resource path="res://graphics/popup/terminal/buttons/up_button_hover.png" type="Texture" id=5]
[ext_resource path="res://fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 6 )

[node name="TerminalMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -234.0
margin_bottom = -196.0
script = ExtResource( 1 )

[node name="Down" type="TextureButton" parent="."]
margin_left = 203.0
margin_top = 122.0
margin_right = 244.0
margin_bottom = 163.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="Up" type="TextureButton" parent="."]
margin_left = 203.0
margin_right = 244.0
margin_bottom = 41.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[node name="Options" type="VBoxContainer" parent="."]
margin_right = 178.0
margin_bottom = 160.0

[node name="Button0" type="Button" parent="Options"]
margin_right = 198.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 1, 0.211765, 1 )
text = "> 0123456789012345678901234567"
flat = true

[node name="Button1" type="Button" parent="Options"]
margin_top = 32.0
margin_right = 198.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 1, 0.211765, 1 )
text = "> 0123456789012345678901234567"
flat = true

[node name="Button2" type="Button" parent="Options"]
margin_top = 64.0
margin_right = 198.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 1, 0.211765, 1 )
text = "> 0123456789012345678901234567"
flat = true

[node name="Button3" type="Button" parent="Options"]
margin_top = 96.0
margin_right = 198.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 1, 0.211765, 1 )
text = "> 0123456789012345678901234567"
flat = true

[node name="Button4" type="Button" parent="Options"]
margin_top = 128.0
margin_right = 198.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.72549, 1, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 1, 0.211765, 1 )
text = "> 0123456789012345678901234567"
flat = true
